@@ -4,6 +4,7 @@ Version 0.3
 - some code cleanup
 - moved more classes to the CLDC base layer
 - fixed audio format conversion
+- bugfix: clipout is able to play multiple audio outputs
 - recognizer defines the engine's audio format
 - started to work on a SAPI layer
 
